--- a/FRONTEND/app/src/main/res/layout/activity_adult_home.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_adult_home.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="kidskeeper.sungshin.or.kr.kikee.Adult.AdultHome.AdultHomeActivity">
-    <Button
-        android:id="@+id/adultHome_button_camera"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/adultHome_viewpager_viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="9"></android.support.v4.view.ViewPager>
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/adultHome_tablayout_tablayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        app:tabIndicatorColor="#fcb542"></android.support.design.widget.TabLayout>
 </LinearLayout>
