--- a/FRONTEND/app/src/main/res/layout/activity_camera.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_camera.xml
@@ -6,10 +6,14 @@
     android:layout_height="match_parent"
     tools:context="kidskeeper.sungshin.or.kr.kikee.Adult.Camera.CameraActivity">
     <WebView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        
-    </WebView>
-
+        android:id="@+id/camera_webView_webView"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_weight="1" />
 </LinearLayout>
