--- a/FRONTEND/app/src/main/res/layout/activity_adult_login.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_adult_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="kidskeeper.sungshin.or.kr.kikee.AdultLoginActivity">
+    tools:context="kidskeeper.sungshin.or.kr.kikee.Adult.LoginJoin.AdultLoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -40,10 +40,10 @@
                 android:text="로그인" />
 
             <Button
-                android:id="@+id/adultlogin_button_back"
+                android:id="@+id/adultlogin_button_join"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="뒤로가기" />
+                android:text="회원 등록" />
         </LinearLayout>
     </LinearLayout>
 
