--- a/FRONTEND/app/src/main/res/layout/fragment_my_page.xml
+++ b/FRONTEND/app/src/main/res/layout/fragment_my_page.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="kidskeeper.sungshin.or.kr.kikee.Adult.AdultHome.MyPageFragment">
+    tools:context="kidskeeper.sungshin.or.kr.kikee.Adult.Mypage.MyPageFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
