--- a/FRONTEND/app/src/main/res/layout/activity_connect.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_connect.xml
@@ -1,9 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="kidskeeper.sungshin.or.kr.kikee.Kids.ConnectActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/Connect_Bluetooth_Message"
+        android:layout_width="179dp"
+        android:layout_height="112dp"
+
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="89dp"
+        android:layout_marginTop="57dp"
+        android:gravity="center_horizontal"
+        android:text="로봇과 연결해주세요"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="157dp"
+        android:layout_height="143dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="93dp"
+        app:layout_constraintBottom_toBottomOf="@+id/Connect_Bluetooth_Message"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@android:drawable/sym_def_app_icon" />
+
+
+    <Button
+        android:id="@+id/connect_button_go_kidsMain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="204dp"
+        android:layout_marginEnd="70dp"
+        android:text="NEXT" />
+
+    <Button
+        android:id="@+id/connect_button_bluetooth"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/Connect_Bluetooth_Message"
+        android:layout_alignTop="@+id/connect_button_go_kidsMain"
+        android:text="연결하기" />
+
+</RelativeLayout>
