--- a/FRONTEND/app/src/main/res/layout/activity_home.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_home.xml
@@ -17,6 +17,7 @@
         android:layout_gravity="center"
         android:text="어른"/>
     <Button
+        android:id="@+id/home_button_go_kids"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
