--- a/FRONTEND/app/src/main/res/layout/activity_bluetooth_device_list.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_bluetooth_device_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Kids.bluetoothDeviceList">
+    tools:context=".Kids.Bluetooth.bluetoothDeviceList">
 
     <TextView
         android:id="@+id/txtState"
