--- a/FRONTEND/app/src/main/res/layout/activity_word_game.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_word_game.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Kids.WordGame">
+    tools:context=".Kids.Word.WordGame">
 
 </android.support.constraint.ConstraintLayout>
