--- a/FRONTEND/app/src/main/res/layout/fragment_community.xml
+++ b/FRONTEND/app/src/main/res/layout/fragment_community.xml
@@ -16,6 +16,7 @@
                 android:id="@+id/community_recyclerview_recyclerview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="30dp"
                 tools:listitem="@layout/item_boardlist">
 
             </android.support.v7.widget.RecyclerView>
