--- a/FRONTEND/app/src/main/res/layout/activity_connect.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_connect.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="kidskeeper.sungshin.or.kr.kikee.Kids.ConnectActivity">
+    tools:context="kidskeeper.sungshin.or.kr.kikee.Kids.Operate.ConnectActivity">
 
     <TextView
         android:id="@+id/Connect_Bluetooth_Message"
