--- a/FRONTEND/app/src/main/res/layout/activity_play_word_game.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_play_word_game.xml
@@ -38,4 +38,24 @@
         android:textSize="25sp"
         android:gravity="center_vertical|center_horizontal"
        />
+
+    <Button
+        android:id="@+id/btn_go_category"
+        android:layout_width="63dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/btn_go_kidsMain"
+        android:layout_marginEnd="14dp"
+        android:text="단어\n목록" />
+
+    <Button
+        android:id="@+id/btn_go_kidsMain"
+        android:layout_width="63dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="15dp"
+        android:layout_marginEnd="85dp"
+        android:text="홈으로" />
+
 </RelativeLayout>
