안드로이드 글 조회 통신 구현

--- a/FRONTEND/app/src/main/res/layout/item_boardlist.xml
+++ b/FRONTEND/app/src/main/res/layout/item_boardlist.xml
@@ -26,19 +26,54 @@
             android:layout_height="wrap_content"
             android:maxLines="2" />
     </LinearLayout>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:text="조회수 : "
-            android:textColor="@color/colorAccent" />
 
-        <TextView
-            android:id="@+id/itemboard_textview_hits"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:textColor="@color/colorAccent" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="조회수 : "
+                android:textColor="@color/colorAccent" />
+
+            <TextView
+                android:id="@+id/itemboard_textview_hits"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textColor="@color/colorAccent" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="좋아요: "
+                android:textColor="@color/colorAccent" />
+
+            <TextView
+                android:id="@+id/itemboard_textview_pick"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textColor="@color/colorAccent" />
+        </LinearLayout>
     </LinearLayout>
+</LinearLayout>
