--- a/FRONTEND/app/src/main/res/layout/activity_catagory_select.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_catagory_select.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="kidskeeper.sungshin.or.kr.kikee.Kids.WordGame.CategorySelectActivity">
+    tools:context="kidskeeper.sungshin.or.kr.kikee.Kids.Operate.WordGame.CategorySelectActivity">
 
     <LinearLayout
         android:id="@+id/categoryselect_linear_category"
