--- a/FRONTEND/app/src/main/res/layout/activity_play_word_game.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_play_word_game.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="kidskeeper.sungshin.or.kr.kikee.Kids.WordGame.PlayWordGameActivity">
+    tools:context="kidskeeper.sungshin.or.kr.kikee.Kids.Operate.WordGame.PlayWordGameActivity">
 
     <Button
         android:id="@+id/solveAnswer"
