--- a/FRONTEND/app/src/main/res/layout/activity_success_word.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_success_word.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Kids.WordGame.SuccessWord">
+    tools:context=".Kids.Operate.WordGame.SuccessWord">
 
     <ImageView
         android:id="@+id/imageView2"
