--- a/FRONTEND/app/src/main/res/drawable/round_background.xml
+++ b/FRONTEND/app/src/main/res/drawable/round_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
     android:shape="rectangle" android:padding="10dp">
-    <solid android:color="@string/Kcolor2"/>
+    <solid android:color="@color/colorPrimary"/>
     <corners android:bottomRightRadius="10dp"
         android:bottomLeftRadius="10dp"
         android:topLeftRadius="10dp"
