--- a/FRONTEND/app/src/main/res/layout/item_boardlist.xml
+++ b/FRONTEND/app/src/main/res/layout/item_boardlist.xml
@@ -5,6 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="100dp"
     android:orientation="horizontal"
+    android:background="@color/colorWhite"
+    android:layout_margin="15dp"
+
     android:padding="10dp">
 
     <LinearLayout
@@ -37,13 +40,11 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:text="조회수 : "
-                android:textColor="@color/colorAccent" />
+          <Button
+              android:layout_width="25dp"
+              android:layout_height="35dp"
+              android:layout_margin="2dp"
+              android:background="@drawable/binoculars"/>
 
             <TextView
                 android:id="@+id/itemboard_textview_hits"
@@ -59,14 +60,10 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:text="좋아요: "
-                android:textColor="@color/colorAccent" />
-
+        <Button
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:background="@drawable/like"/>
             <TextView
                 android:id="@+id/itemboard_textview_pick"
                 android:layout_width="wrap_content"
