--- a/FRONTEND/app/src/main/res/layout/activity_catagory_select.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_catagory_select.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@drawable/bgpattern"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bgpattern"
     tools:context="kidskeeper.sungshin.or.kr.kikee.Kids.Operate.WordGame.CategorySelectActivity">
 
     <LinearLayout
         android:id="@+id/categoryselect_linear_category"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center_horizontal|center_vertical"
-        >
+        android:gravity="center"
+        android:orientation="vertical">
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
