--- a/FRONTEND/app/src/main/res/layout/activity_connect.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_connect.xml
@@ -1,38 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/bgpattern"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="kidskeeper.sungshin.or.kr.kikee.Kids.Operate.ConnectActivity">
 
     <TextView
         android:id="@+id/Connect_Bluetooth_Message"
-        android:layout_width="179dp"
-        android:layout_height="112dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
 
+        android:background="@drawable/round_background"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="89dp"
-        android:layout_marginTop="57dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="80dp"
+        android:textSize="25dp"
+        android:textColor="@color/colorWhite"
         android:gravity="center_horizontal"
         android:text="로봇과 연결해주세요"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="157dp"
-        android:layout_height="143dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="93dp"
+        android:layout_margin="40dp"
+        android:layout_gravity="center"
         app:layout_constraintBottom_toBottomOf="@+id/Connect_Bluetooth_Message"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@android:drawable/sym_def_app_icon" />
+        app:srcCompat="@drawable/searching" />
 
 
     <Button
@@ -42,6 +50,11 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="183dp"
-        android:text="연결하기" />
+        android:layout_gravity="center"
+        android:background="@drawable/round_background"
+        android:text="연결하기"
+        android:textColor="@color/colorWhite"
+        android:textSize="20dp"
+/>
 
-</RelativeLayout>
+</LinearLayout>
