--- a/FRONTEND/app/src/main/res/layout/activity_board_detail.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_board_detail.xml
@@ -4,22 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bgpattern"
     android:orientation="vertical"
     tools:context="kidskeeper.sungshin.or.kr.kikee.Adult.Community.BoardDetailActivity">
 
     <TableLayout
         android:id="@+id/board_content_Penal"
         android:layout_width="match_parent"
-        android:layout_height="200dp">
+        android:layout_height="200dp"
+        android:layout_margin="10dp">
 
         <TableRow>
 
             <TextView
-                android:id="@+id/board_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="제목입니다" />
+                android:text="제목  " />
+
+            <TextView
+                android:id="@+id/board_detail_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
         </TableRow>
 
         <TableRow>
@@ -27,7 +31,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="nickname" />
+                android:text="작성자  " />
+
+            <TextView
+                android:id="@+id/board_detail_nickname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
             <View
                 android:layout_width="0dp"
@@ -35,18 +44,16 @@
                 android:layout_weight="1" />
 
             <TextView
-                android:id="@+id/board_date"
+                android:id="@+id/board_detail_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:text="날짜입니다." />
+                android:layout_gravity="right" />
         </TableRow>
 
         <TextView
-            android:id="@+id/board_content"
+            android:id="@+id/board_detail_content"
             android:layout_width="match_parent"
-            android:layout_height="140dp"
-            android:text="내용입니다." />
+            android:layout_height="140dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -54,26 +61,29 @@
             android:layout_gravity="right">
 
             <ImageView
-                android:layout_width="20dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="3dp"
                 android:layout_marginLeft="10dp"
                 android:background="@drawable/friends" />
 
             <TextView
+                android:id="@+id/board_detail_hits"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=" : 4" />
+                android:text="" />
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="3dp"
                 android:layout_marginLeft="10dp"
                 android:background="@drawable/like" />
 
             <TextView
+                android:id="@+id/board_detail_picks"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=" : 8" />
+                android:layout_height="wrap_content" />
         </LinearLayout>
     </TableLayout>
 
@@ -97,7 +107,7 @@
         <Button
             android:id="@+id/like_btn"
             android:layout_width="20dp"
-            android:layout_height="30dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/like" />
 
@@ -105,7 +115,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="5"
-            android:text="댓글을 입력해 주세요" />
+            android:hint="댓글을 입력해 주세요" />
 
         <Button
             android:layout_width="30dp"
