--- a/FRONTEND/app/src/main/res/layout/activity_join.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_join.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/icon_robot"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -78,7 +79,7 @@
                         android:layout_height="match_parent"
                         android:layout_margin="2dp"
                         android:layout_weight="1"
-                        android:background="@color/colorPrimary"
+                        android:background="@drawable/round_background"
                         android:text="이메일 중복확인"
                         android:textColor="@color/colorWhite" />
 
@@ -88,7 +89,7 @@
                         android:layout_height="match_parent"
                         android:layout_margin="2dp"
                         android:layout_weight="1"
-                        android:background="@color/colorPrimary"
+                        android:background="@drawable/round_background"
                         android:text="이메일 인증"
                         android:textColor="@color/colorWhite" />
                 </LinearLayout>
@@ -116,7 +117,7 @@
                         android:layout_height="wrap_content"
                         android:layout_margin="2dp"
                         android:layout_weight="1"
-                        android:background="@color/colorPrimary"
+                        android:background="@drawable/round_background"
                         android:text="인증"
                         android:textColor="@color/colorWhite" />
 
@@ -145,7 +146,7 @@
                         android:layout_height="wrap_content"
                         android:layout_margin="2dp"
                         android:layout_weight="1"
-                        android:background="@color/colorPrimary"
+                        android:background="@drawable/round_background"
                         android:text="인증"
                         android:textColor="@color/colorWhite" />
 
