--- a/FRONTEND/app/src/main/res/layout/activity_play_word_game.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_play_word_game.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/bgpattern"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,6 +16,8 @@
         android:layout_marginBottom="99dp"
         android:layout_marginEnd="134dp"
         android:text="정답 맞추기"
+        android:background="@drawable/round_background"
+        android:textColor="@color/colorWhite"
         android:gravity="center_horizontal|center_vertical"/>
 
     <TextView
@@ -46,6 +49,8 @@
         android:layout_alignParentEnd="true"
         android:layout_alignTop="@+id/btn_go_kidsMain"
         android:layout_marginEnd="14dp"
+        android:textColor="@color/colorWhite"
+        android:background="@drawable/round_background"
         android:text="단어\n목록" />
 
     <Button
@@ -56,6 +61,8 @@
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="15dp"
         android:layout_marginEnd="85dp"
+        android:textColor="@color/colorWhite"
+        android:background="@drawable/round_background"
         android:text="홈으로" />
 
 </RelativeLayout>
