--- a/FRONTEND/app/src/main/res/layout/activity_success_word.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_success_word.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/bgpattern"
     android:layout_height="match_parent"
     tools:context=".Kids.Operate.WordGame.SuccessWord">
 
@@ -24,6 +25,8 @@
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="98dp"
         android:layout_marginEnd="110dp"
+        android:textColor="@color/colorWhite"
+        android:background="@drawable/round_background"
         android:text="돌아가기" />
 
     <TextView
@@ -31,9 +34,10 @@
         android:layout_width="231dp"
         android:layout_height="63dp"
         android:layout_centerInParent="true"
+        android:background="@drawable/round_background"
         android:gravity="center_vertical|center_horizontal"
         android:text="축하합니다! \n 정말 잘했어요!"
-        android:textColor="#f00f"
+        android:textColor="@string/Kcolor4"
         android:textSize="20dp" />
 
     <ImageView
@@ -43,5 +47,5 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="97dp"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:srcCompat="@drawable/searching" />
 </RelativeLayout>
