--- a/FRONTEND/app/src/main/res/drawable/round_background.xml
+++ b/FRONTEND/app/src/main/res/drawable/round_background.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    android:shape="rectangle" android:padding="10dp">
-    <solid android:color="@color/colorPrimary"/>
+    android:shape="rectangle"
+    android:padding="10dp">
+    <solid android:color="#FFB3A4"/>
     <corners android:bottomRightRadius="10dp"
         android:bottomLeftRadius="10dp"
         android:topLeftRadius="10dp"
