--- a/FRONTEND/app/src/main/res/layout/activity_home.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_home.xml
@@ -1,33 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@drawable/bgpattern"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#FFF3F0"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_gravity="center"
     android:gravity="center"
-    tools:context="kidskeeper.sungshin.or.kr.kikee.HomeActivity">
+    tools:context="kidskeeper.sungshin.or.kr.kikee.Home.HomeActivity">
+
+    <!--<Button-->
+        <!--android:id="@+id/home_button_go_adult"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="@drawable/round_background"-->
+        <!--android:textColor="@color/colorWhite"-->
+        <!--android:layout_margin="20dp"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:text="어른"/>-->
+    <!--<Button-->
+        <!--android:id="@+id/home_button_go_kids"-->
+        <!--android:background="@drawable/round_background"-->
+        <!--android:textColor="@color/colorWhite"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:text="아이"/>-->
 
 
-    <Button
+    <ImageButton
         android:id="@+id/home_button_go_adult"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/round_background"
-        android:textColor="@color/colorWhite"
-        android:layout_margin="20dp"
-        android:layout_gravity="center"
-        android:text="어른"/>
-    <Button
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginStart="70dp"
+        android:background="#FFFAF9"
+        app:srcCompat="@drawable/adult" />
+
+    <ImageButton
         android:id="@+id/home_button_go_kids"
-        android:background="@drawable/round_background"
-        android:textColor="@color/colorWhite"
-        android:layout_width="wrap_content"
+        android:layout_width="102dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="아이"/>
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/home_button_go_adult"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginEnd="70dp"
+        android:background="#FFFAF9"
+        app:srcCompat="@drawable/kids" />
 
 
-</LinearLayout>
+</RelativeLayout>
