--- a/FRONTEND/app/src/main/res/layout/activity_home_work.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_home_work.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Kids.Operate.OperateRobot">
+    tools:context=".Kids.HomeWork.HomeWork">
 
 </android.support.constraint.ConstraintLayout>
