--- a/FRONTEND/app/src/main/res/layout/activity_login.xml
+++ b/FRONTEND/app/src/main/res/layout/activity_login.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bgpattern"
-
+    android:background="#FFF3F0"
     tools:context="kidskeeper.sungshin.or.kr.kikee.Home.LoginActivity">
 
     <LinearLayout
