--- a/FRONTEND/app/src/main/res/layout/fragment_adult_home.xml
+++ b/FRONTEND/app/src/main/res/layout/fragment_adult_home.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/bgpattern"
+    android:background="#FFF3F0"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="kidskeeper.sungshin.or.kr.kikee.Adult.AdultHome.AdultHomeFragment">
