--- a/FRONTEND/app/src/main/res/layout/fragment_community.xml
+++ b/FRONTEND/app/src/main/res/layout/fragment_community.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="#FFF3F0"
     android:layout_height="match_parent"
     tools:context="kidskeeper.sungshin.or.kr.kikee.Adult.Community.CommunityFragment">
 
